# JakaVision

./: CMakeLists.txt  Jakauser.h  LICENCE  OpenCVFuncs.cpp  OpenCVFuncs.h  README.md  jakauser.cpp  main.cpp
